@@ -1,5 +1,8 @@
 2007-05-08  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/plugin_manager.py: Added context menus to 
+	plugin tabs (bug 427059).
+	
 	* ChangeLog:
 	* NOTICE:
 	* help/C/accerciser.xml:
